# suckless-conf

./: .gitignore  CHANGELOG.md  LICENSE.fuzzy-parse  README.md  flake.nix  suckless-conf.cabal
.github/workflows/: ci.yml
bf6/: Main.hs
examples/: cond.ss  p0.ss  p1.ss  pb.ss  pe.ss  pi.ss  pl.ss  pl4.ss  re.ss
examples/pm/: m1.ss
lib/Data/Config/Suckless/: Script.hs  Syntax.hs  System.hs
lib/Data/Config/Suckless/Almost/: RPC.hs
lib/Data/Config/Suckless/Script/: File.hs  Internal.hs
